objects/Track__c.object
<CustomObject>
    <fields>
        <fullName>Accomplishments_This_Week__c</fullName>
        <inlineHelpText>List out any accomplishments made this week by the business.</inlineHelpText>
        <label>Accomplishments This Week</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consultant_Comments__c</fullName>
        <inlineHelpText>Comments from the consultant team regarding the track</inlineHelpText>
        <label>Consultant Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consultant_Partner_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The consultant or partner lead for the track.</inlineHelpText>
        <label>Consultant/Partner Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tracks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deliverables_Comments__c</fullName>
        <label>Deliverables Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deliverables_Status__c</fullName>
        <label>Deliverables Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deliverables__c</fullName>
        <formula>IMAGE( 
CASE(Deliverables_Status__c, 
"Green", "/img/samples/light_green.gif",
"Yellow", "/img/samples/light_yellow.gif",
"Red", "/img/samples/light_red.gif", 
"/s.gif"), 
"status color")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deliverables</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependencies__c</fullName>
        <label>Dependencies / Blockers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Focus_Areas_for_Next_Week__c</fullName>
        <label>Focus Areas for Next Week</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Key_Deliverables_and_Upcoming_Milestones__c</fullName>
        <inlineHelpText>List any key deliverables and upcoming milestones</inlineHelpText>
        <label>Key Deliverables and Upcoming Milestones</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Comments__c</fullName>
        <label>Overall Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Status__c</fullName>
        <label>Overall Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall__c</fullName>
        <formula>IMAGE( 
CASE(Overall_Status__c, 
"Green", "/img/msg_icons/confirm16.png",
"Yellow", "/img/msg_icons/warning16.png",
"Red", "/img/msg_icons/error16.png", 
"/s.gif"), 
"status color")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Comments__c</fullName>
        <label>Resource Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Resource_Status__c</fullName>
        <label>Resource Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <formula>IMAGE( 
CASE(Resource_Status__c, 
"Green", "/img/msg_icons/confirm16.png", 
"Yellow", "/img/msg_icons/warning16.png", 
"Red", "/img/msg_icons/error16.png", 
"/s.gif"), 
"status color")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Status__c</fullName>
        <label>Risk Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <formula>IMAGE( 
CASE(Risk_Status__c, 
"Green", "/img/msg_icons/confirm16.png", 
"Yellow", "/img/msg_icons/warning16.png", 
"Red", "/img/msg_icons/error16.png", 
"/s.gif"), 
"status color")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risks_Comments__c</fullName>
        <label>Risks Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Schedule_Comments__c</fullName>
        <label>Schedule Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Schedule_Status__c</fullName>
        <label>Schedule Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <formula>IMAGE( 
CASE(Schedule_Status__c, 
"Green", "/img/msg_icons/confirm16.png", 
"Yellow", "/img/msg_icons/warning16.png", 
"Red", "/img/msg_icons/error16.png", 
"/s.gif"), 
"status color")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Testing_Comments__c</fullName>
        <label>Testing Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Testing_Status__c</fullName>
        <label>Testing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Testing__c</fullName>
        <formula>IMAGE( 
CASE(Testing_Status__c, 
"Green", "/img/msg_icons/confirm16.png", 
"Yellow", "/img/msg_icons/warning16.png", 
"Red", "/img/msg_icons/error16.png", 
"/s.gif"), 
"status color")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Testing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Track_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Track Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tracks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Week_Ending_Date__c</fullName>
        <label>Week Ending Date</label>
        <type>Date</type>
    </fields>
    <label>Track</label>
    <nameField>
        <label>Track Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tracks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Overall__c</columns>
        <columns>Overall_Status__c</columns>
        <columns>Track_Lead__c</columns>
        <columns>Consultant_Partner_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>